Agregué una nueva ruta /detalles/pedidos/ se documentó en swagger además de otras mmodificaciones
